# time-series-data-manager

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  time_series_file_reader.cpp  time_series_file_writer.cpp
include/: column.hpp  data_type.h  data_type.hpp  file.h  file.hpp  parse.h  time_series.h  time_series.hpp  time_series_reader.hpp  time_series_writer.hpp  ts_file_definition.h  ts_file_definition.hpp
src/: file.cpp  file_basics.cpp  main.cpp  time_series.cpp  time_series_reader.cpp  time_series_writer.cpp
test/: test.cpp
test/data/: info.header  info.inf  nyse.header  nyse.inf
